<resources>
    <string name="app_name">节能控制</string>
    <string name="main_menu_zhuye_title">节能集中控制平台</string>

    <string name="file_account">heat_account_file</string>
    <!-- 登录 -->
    <string name="title_login">用户登录</string>
    <string name="prompt_user">请输入手机号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>

    <!-- 时间 -->
    <string name="cancle">取消</string>
    <string name="time_title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <!-- 主页 -->
    <string name="main_menu_index_title">节能集中控制平台</string>
    <string name="main_menu_index">首页</string>
    <string name="main_menu_map">地图</string>
    <string name="main_menu_stat">能耗</string>
    <string name="main_menu_user">用户</string>

    <!--自定义dialog背景全透明无边框theme -->
    <style name="Dialog_Msg" parent="android:style/Theme.Dialog">
        <!--背景颜色及和透明程度-->
        <item name="android:windowBackground">@android:color/transparent</item>
        <!--是否去除标题 -->
        <item name="android:windowNoTitle">true</item>
        <!--是否去除边框-->
        <item name="android:windowFrame">@null</item>
        <!--是否浮现在activity之上-->
        <item name="android:windowIsFloating">true</item>
        <!--是否模糊-->
        <item name="android:backgroundDimEnabled">false</item>
    </style>

    <style name="s_true" parent="@android:style/TextAppearance.Small">
        <item name="android:textColor">#33da33</item>
    </style>
    <style name="s_false" parent="@android:style/TextAppearance.Small">
        <item name="android:textColor">#9b9b9b</item>
    </style>

</resources>