<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/date_picker_bg"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/cancle"
            android:textColor="@color/lightBlue"
            android:textSize="40px"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time_title"
            android:textColor="@color/lightBlue"
            android:textSize="42px"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/commit"
            android:textColor="@color/lightBlue"
            android:textSize="40px"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/date_picker_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="480px"
        android:background="@color/date_picker_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="40px"
        android:paddingTop="30px"
        android:paddingEnd="50px"
        android:paddingBottom="40px">

        <com.whisht.heatapp.utils.PickerView
            android:id="@+id/dpv_year"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textSize="42px" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="40px" />

        <com.whisht.heatapp.utils.PickerView
            android:id="@+id/dpv_month"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/month"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="40px" />

        <com.whisht.heatapp.utils.PickerView
            android:id="@+id/dpv_day"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="40px" />

        <com.whisht.heatapp.utils.PickerView
            android:id="@+id/dpv_hour"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/tv_hour_unit"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hour"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="40px" />

        <com.whisht.heatapp.utils.PickerView
            android:id="@+id/dpv_minute"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingVertical="20px"
            />

        <TextView
            android:id="@+id/tv_minute_unit"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/minute"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="40px" />

    </LinearLayout>

</LinearLayout>