<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activityLogin"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal">
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px">
        <requestFocus />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:scaleType="fitXY"
            android:src="@drawable/bg_logon"
            android:layout_width="match_parent"
            android:layout_height="682px"/>
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="256px"
                android:layout_height="265px"
                android:layout_marginTop="160px"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ico_login_logo" />
            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1px"
                android:textStyle="bold"
                android:text="@string/main_menu_zhuye_title"
                android:textSize="60px"
                android:textColor="#ffffff"/>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="84px"
        android:layout_width="740px"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginTitle"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="46px"
                android:layout_height="72px"
                android:background="@drawable/login_phone"/>
            <EditText
                android:id="@+id/loginUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40px"
                android:background="@drawable/edittext_underline_selector"
                android:hint="@string/prompt_user"
                android:inputType="text"
                android:maxLines="1"
                android:paddingEnd="30px"
                android:singleLine="true"
                android:textSize="48px"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="80px"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="58px"
                android:layout_height="70px"
                android:background="@drawable/login_passwd"/>
            <EditText
                android:id="@+id/loginPasswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="38px"
                android:background="@drawable/edittext_underline_selector"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="30px"
                android:singleLine="true"
                android:textSize="48px"/>
        </LinearLayout>
        <View
            android:id="@+id/activityLoginView"
            android:layout_width="match_parent"
            android:layout_height="100px"/>
        <Button
            android:layout_marginTop="80px"
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/panel_login_buttion_shape"
            android:text="@string/action_sign_in"
            android:textColor="@color/colorWhite"
            android:textSize="42px"
            android:textStyle="bold" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/versionEdit"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="30px"
        android:textColor="#707070"
        android:textSize="36px"
        android:fontFamily="@font/msyh"/>
</LinearLayout>
